# lab2

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean-output.sh  gameoflife-kommi.c  gameoflife-old.c  gameoflife-vorlage-omp.c  gameoflife-vorledit.c  gameoflife.c  heat_equation.c  results.xlsx  script-omp.sh  script-segm-omp.sh  script.sh  script.sh_
results_/: logprogram  logtime  logtime1.csv  logtime2.csv  logtime3.csv
results_/log omp for/: logprogram  logtime  logtime1.csv  logtime2.csv  logtime3.csv
